--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string-array
         name = "menu">
         <item>Toggles</item>
+        <item>NFC</item>
     </string-array>
 </resources>
